--- a/public/css/responsive.css
+++ b/public/css/responsive.css
@@ -1,417 +1,275 @@
-/* LAYAR LEBAR */
-@media screen and (min-width: 992px) and (max-width: 1199px) {
-	.top-navbar .navbar-light .navbar-nav .nav-item{
-		margin: 0px 5px;
-	}
-  .testimoni-columns {
-    flex-direction: column;
+/*-----------------------------------------------------------------------------------------------------------------
+iPad Pro
+-----------------------------------------------------------------------------------------------------------------*/
+@media only screen and (max-width: 1366px) {
+  /*! NAVBAR --------------------------------------------------*/
+  .top-navbar .container-fluid {
+    padding-top: 5px;
   }
-  .testimoni-column {
-    width: 100%;
+  .top-navbar .navbar-light .navbar-nav .nav-item {
+    margin: 0px 10px;
   }
-}
-
-
-@media (min-width: 768px) and (max-width: 991px) {
-	.top-navbar .navbar-light .navbar-nav .nav-item{
-		padding: 0px;
-	}
-	.top-navbar .navbar-light .navbar-nav .nav-item::after{
-		display: none;
-	}
-	.top-navbar .navbar-light .navbar-nav .nav-item .nav-link::before{
-		display: none;
-	}
-	.top-navbar .navbar-light .navbar-nav .nav-item .nav-link::after{
-		display: none;
-	}
-	.testi-table-header h2{
-		font-size: 22px;
-	}
-	.testi-table-features{
-		padding: 0px 0px 15px 0px;
-		margin: 15px 15px 0 15px;
-	}
-	.testi-table-features p{
-		font-size: 13px;
-	}
-
-
-  #sejarah p {
-    font-size: 16px; 
-    padding: 10px;    
+  .top-navbar .navbar-light .navbar-nav .nav-link {
+    text-align: left;
+    font-size: 17px;
+    font-weight: 480;
   }
-
-  .testimoni-section h2 {
-    font-size: 36px;
-  }
-  .testimoni-card {
-    flex-direction: column;
-  }
-  .testimoni-image {
-    width: 100%;
-    height: 200px;
-  }
-  .testimoni-content {
-    padding: 15px;
-  }
-}
-
-
-@media only screen and (max-width: 767px) {
-	.top-navbar .navbar-light .navbar-nav .nav-item{
-		padding: 0px;
-	}
-	.top-navbar .navbar-light .navbar-nav .nav-item::after{
-		display: none;
-	}
-	.top-navbar .navbar-light .navbar-nav .nav-item .nav-link::before{
-		display: none;
-	}
-	.top-navbar .navbar-light .navbar-nav .nav-item .nav-link::after{
-		display: none;
-	}
-	.first-section h2{
-		font-size: 28px;
-	}
-	.first-section .lead{
-		font-size: 14px;
-	}
-  .carousel-control-prev,
-  .carousel-control-next{
-    width: 30px !important;
-    height: 30px !important;
-  }
-  .first-section h2,
-  .first-section p{
-    text-align: center !important;
-  }
-
-	.section-title h3{
-		font-size: 28px;
-	}
-	.message-box h2{
-		font-size: 24px;
-	}
-	.testi-table{
-		margin-bottom: 40px;
-	}
-	.testi-table-features{
-		padding: 0px 0px 10px 0px;
-	}
-
-	.footer .widget{
-		margin-bottom: 30px;
-	}
-
-	.section{
-		padding: 40px 0;
-	}
-
-  .untree_co-section {
-    padding: 50px 0;
-  }
-  .untree_co-section .item {
-    margin-bottom: 15px;
-  }
-  #paket {
-    margin: 100px 0px 20px;
-    height: 100vh;
-  }
-
-  #paket {
-    margin: 60px 20px;
-    height: auto;
+  .navbar-right {
+    margin-right: -10px;
   }
   
-  .container.card-paket {
-    padding: 0 20px;
+  /*! PAGE 1: BERANDA -----------------------------------------*/
+  #carouselExampleControls.beranda-slider {
+    height: 60%;
   }
-  
-  .card-paket {
-    padding: 30px 15px;
+  #home .big-tagline {
+    padding-left: 60px;
+    padding-right: 60px;
   }
-  
-  /* Struktur card */
-  .card-paket .row {
-    flex-direction: column;
+
+  .post-media img {
+    width: 90% !important;
   }
-  
-  .card-paket .col-md-4 {
+
+  .card {
+    min-width: 300px;
+  }
+
+  /*! PAGE 2: TENTANG KAMI ------------------------------------*/
+  .section-sejarah {
+    margin: 0px 90px;
+  }
+  img.ilus-sejarah {
+    width: 50%;
+  }
+  .section-title p {
+    line-height: 30px;
+  }
+  .cardbox-misi {
+    line-height: 23px;
+  }
+  h3.text-left.title-unggul {
+    padding-left: 36px !important;
+  }
+  .row.section-keunggulan {
+    padding-left: 0px;
+  }
+  .ilustrasi-keunggulan {
+    margin-left: -60px;
+    width: 130%;
+  }
+  .header-sct-ttgkami {
     margin-bottom: 20px;
   }
-  
-  /* Heading dan paragraf */
-  .paket-sd h2,
-  .paket-smp h2,
-  .paket-sma h2,
-  .paket-utbk h2,
-  .paket-lain h2 {
-    font-size: 24px;
-    text-align: center;
-    padding-bottom: 10px;
+
+  /*! PAGE 3: PAKET -------------------------------------------*/
+  #paket {
+    height: 630px;
+    margin-bottom: 277px !important;
   }
-  
-  .paket-sd p.lead,
-  .paket-smp p.lead,
-  .paket-sma p.lead,
-  .paket-utbk p.lead,
-  .paket-lain p.lead {
-    font-size: 15px;
-    line-height: 1.5;
+  .first-section h2 {
+    font-size: 42px;
   }
-  
-  /* Tombol paket */
+  .first-section .lead {
+    line-height: 24px;
+    font-size: 16px;
+  }
   #paket span.hover-btn-new {
-    font-size: 14px;
-    width: 150px;
-    margin-bottom: 10px;
+    font-size: 12.5px;
   }
-  
-  #paket span.spn-utbk {
-    width: 210px;
-    margin-bottom: 15px;
-    display: inline-block;
-  }
-  
   #paket span.spn-lain {
-    width: 220px;
-    margin-right: 10px;
-    margin-bottom: 15px;
+    padding-top: 10px;
+    padding-bottom: 10px;
+    line-height: 18px;
+    width: 186px;
+    font-size: 12.5px !important;
   }
-  
-  /* Border radius */
-  .brdr-pkt {
-    border-radius: 20px;
+
+  /*! PAGE 4: TESTIMONI ----------------------------------------*/
+  .testimoni-image {
+    width: fit-content;
+    width: 175px;
+    padding-top: 10px;
   }
-  
-  /* Tombol daftar */
-  .daftar-sekarang {
+  .testimoni-card {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    text-align: center;
+    min-height: 430px;
+  }
+  .testimoni-content {
+    padding: 20px 27px;
+  }
+  .testimoni-content h3 {
+    margin: 0px;
+  }
+  .testimoni-content p {
+    font-size: 12px;
+  }
+
+  /*! PAGE 5: GALERI -------------------------------------------------*/
+
+
+  /*! FORM DAFTAR ---------------------------------------------------*/
+  .form-pendaftaran {
+    margin: 90px 120px;
+  }
+
+  /*! FOOTER --------------------------------------------------------*/
+  .footer .col-lg-3:first-child, 
+  .footer .col-lg-3:last-child {
+    display: none !important; 
+  }
+  .footer .col-lg-2 {
+    width: 100% !important; 
+    flex: 0 0 33.33%;
+    max-width: 33.33%;
+    padding: 0px 57px 15px 0px;
+  }
+  .widget.suwarna-title {
+    padding-right: 0px;
+    margin-left: 50px;
+  }
+
+  .thumb {
+    height: 145px;
+  }
+}
+
+
+
+/*-----------------------------------------------------------------------------------------------------------------
+iPhone 14 Pro Max
+-----------------------------------------------------------------------------------------------------------------*/
+@media only screen and (max-width: 932px) {
+  /*! PAGE 1: BERANDA -----------------------------------------*/
+  .first-section h2 {
+    text-align: center;
+    font-size: 30px;
+    font-weight: 350;
+  }
+  .first-section h2 strong {
+  font-weight: 400;
+  }
+  .first-section .lead {
+    text-align: center;
+    line-height: 17px;
+    font-size: 12px;
+  }
+  .first-section .big-tagline a{
+    font-size: 12px;
+    font-weight: 400;
+  }
+  .hover-btn-new {
+    text-align: center;
+    width: 100%;
+    line-height: 26px;
+    padding: 0px 10px;
+  }
+  .section-title p {
+    font-size: 13px;
+    line-height: 23px;
+  }
+  .section {
+    padding: 60px 0px;
+  }
+  img.brosur-ill {
+    margin-bottom: 22px;
+  }
+  .sect-brosur {
+    margin-bottom: 35px !important;
+  }
+  .post-media {
+    margin-left: 20px;
+  }
+  .testi .section-title p {
+    line-height: 17px;
+  }
+  .testi-table {
+    width: 80%;
+    margin: 0px auto 23px;
+  }
+  .testi-table-features p {
+    line-height: 18px;
+  }
+  .testi-table-daftar {
+    margin-top: 0px;
+    padding-left: 50px;
+    padding-right: 50px;
+  }
+
+  /*! PAGE 2: TENTANG KAMI ------------------------------------------*/
+  .section-sejarah {
+    margin: 0px 35px;
+  }
+  .ilustrasi-keunggulan {
+    padding-left: 30px;
+    margin-left: auto;
+    margin-right: auto;
+    width: 80%;
+  }
+  img.ilus-sejarah {
+    width: 70%;
+  }
+  .header-sct-ttgkami {
     margin-left: 30px;
     margin-right: 30px;
   }
-
-  .row.section-keunggulan{
-    padding-left: 0px !important;
+  .box-visi h2 {
+    font-size: 15px;
   }
-}
-
-
-@media only screen and (min-width: 280px) and (max-width: 599px) {
-	.top-navbar .navbar-light .navbar-nav .nav-item{
-		padding: 0px;
-	}
-	.top-navbar .navbar-light .navbar-nav .nav-item::after{
-		display: none;
-	}
-	.top-navbar .navbar-light .navbar-nav .nav-item .nav-link::before{
-		display: none;
-	}
-	.top-navbar .navbar-light .navbar-nav .nav-item .nav-link::after{
-		display: none;
-	}
-
-	.first-section h2{
-		font-size: 28px;
-	}
-	.first-section .lead{
-		font-size: 14px;
-	}
-	.first-section .big-tagline a{
-		font-size: 14px;
-	}
-	.section-title p{
-		font-size: 14px;
-		line-height: 24px;
-	}
-  .message-box p {
-    margin: 0px;
+  .cardbox-misi {
+    margin-left: auto;
+    margin-right: auto;
   }
-
-  img.brosur-ill {
-    height: 140px;
-    padding-bottom: 20px;
-  }
-
-	.section-title h3{
-		font-size: 28px;
-	}
-	.message-box h2{
-		font-size: 24px;
-	}
-	.testi-table{
-		margin-bottom: 40px;
-	}
-	.testi-table-features{
-		padding: 0px 0px 10px 0px;
-	}
-
-	.footer .widget{
-		margin-bottom: 30px;
-	}
-
-	.section{
-		padding: 40px 0;
-	}
-
-	.suwarna-title,
-  .details {
-    margin-left: 30px !important;
-  }
-}
-
-
-/* Media Queries untuk Layar Sedang (Tablet) */
-@media only screen and (max-width: 991px) {
-  /* Paket Section */
-  #paket {
-    margin: 80px 50px;
-    height: auto;
-    min-height: 80vh;
-  }
-  
-  .container.card-paket {
-    margin-left: 0;
-    padding: 0 40px;
-  }
-  
-  .card-paket {
-    padding: 0px 40px 0px 20px;
-  }
-  
-  /* Tombol paket */
-  #paket span.hover-btn-new {
-    font-size: 16px;
-    width: 180px;
-  }
-  
-  #paket span.spn-utbk {
-    width: 250px;
-  }
-  
-  #paket span.spn-lain {
-    width: 300px;
-    margin-right: 15px;
-  }
-  
-  /* Tombol daftar */
-  .daftar-sekarang {
-    margin-left: 50px;
-    margin-right: 50px;
-  }
-  
-  /* Border radius pada carousel */
-  .brdr-pkt {
-    border-radius: 30px;
-  }
-  .row.section-keunggulan{
-    padding-left: 0px !important;
-  }
-}
-
-
-/* Media Queries untuk Layar Handphone Standar */
-@media only screen and (max-width: 480px) {
-  #paket {
-    margin: 40px 10px;
-  }
-  .container.card-paket {
-    padding: 0 10px;
-  }
-  
-  .card-paket {
-    padding: 20px 10px;
-  }
-  
-  /* Tampilan ilustrasi */
-  .card-paket .col-md-4 img {
-    max-width: 70%;
-    margin: 0 auto 15px;
-  }
-  
-  /* Heading dan paragraf */
-  .paket-sd h2,
-  .paket-smp h2,
-  .paket-sma h2,
-  .paket-utbk h2,
-  .paket-lain h2 {
-    font-size: 20px;
-    padding-bottom: 8px;
-  }
-  
-  .paket-sd p.lead,
-  .paket-smp p.lead,
-  .paket-sma p.lead,
-  .paket-utbk p.lead,
-  .paket-lain p.lead {
-    font-size: 14px;
-    line-height: 1.4;
-  }
-  
-  /* Tombol paket */
-  #paket span.hover-btn-new {
+  .list-unggul {
+    line-height: 12px;
     font-size: 13px;
-    width: 100%;
-    display: block;
-    margin: 8px 0;
   }
-  
-  #paket span.spn-utbk {
-    width: 100%;
-  }
-  
-  #paket span.spn-lain {
-    width: 100%;
-    margin-right: 0;
-  }
-  
-  /* Border radius */
-  .brdr-pkt {
-    border-radius: 15px;
-  }
-  
-  /* Tombol daftar */
-  .daftar-sekarang {
-    margin-left: 10px;
-    margin-right: 10px;
-    width: calc(100% - 20px);
-    text-align: center;
-  }
-  
-  /* Kontrol carousel */
-  .carousel-control-prev, .carousel-control-next {
-    width: 8%;
-  }
-  
-  .carousel-indicators {
-    bottom: 0;
-  }
-  
-  .carousel-indicators li {
-    width: 8px;
-    height: 8px;
-    margin: 0 3px;
+  .maps-meta iframe {
+    max-width: 300px;
+    height: 300px;
   }
 
-  .section-sejarah {
-    margin: 0px 20px;
+  /*! PAGE 3: PAKET -------------------------------------------------*/
+  #paket {
+    margin-left: 20px !important;
+    margin-right: 20px !important;
+    margin-bottom: 60px !important;
   }
-  .row.section-keunggulan{
-    padding-left: 0px !important;
+  .container.card-paket {
+    margin-left: 0px;
   }
-  .testimoni-section h2 {
-    font-size: 28px;
-  }
-
-  .testimoni-card {
-    min-height: 220px;
-  }
-
-  .testimoni-content p {
-    font-size: 16px;
+  .card-paket {
+    padding: 0px 30px;
   }
 
-  .testimoni-image {
-    height: 180px;
+  .form-pendaftaran {
+    margin: 80px 20px;
+  }
+  .form-pendaftaran .container-fluid{
+    padding-left: 20px;
+    padding-right: 20px;
+  }
+  /*! FOOTER --------------------------------------------------------*/
+  .footer {
+    padding-top: 40px !important;
+  }
+  .footer .col-lg-2 {
+    flex: 0 0 100%; 
+    max-width: 100%;
+    margin-bottom: 30px; 
+  }
+  .info-link {
+    margin-left: 50px !important;
+  }
+  .footer-links {
+    line-height: 15px;
+    margin-bottom: 0px;
+  }
+
+  .widget.details {
+    margin-left: 50px;
   }
 }
